apps/jellyfin/overlays/nishir-tailnet/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: jellyfin
spec:
  gatewayClassName: jellyfin
  listeners:
    - name: http
      port: 8096
      protocol: HTTP
    - name: https
      port: 8920
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: jellyfin-i-shikanime-studio-tls
            group: ""
            kind: Secret
