apps/jellyfin/overlays/nishir-tailnet/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
spec:
  hostnames:
    - jellyfin.i.shikanime.studio
  parentRefs:
    - name: jellyfin
      sectionName: https
  rules:
    - backendRefs:
        - name: jellyfin
          port: http
