apps/jellyfin/overlays/nishir-tailnet/patch-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
spec:
  hostnames:
    - jellyfin.i.shikanime.studio
  parentRefs:
    - name: jellyfin
      sectionName: http
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-redirect
spec:
  parentRefs:
    - name: jellyfin
      sectionName: http
